objects/Executive_Management_Team__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipName>Executive_Management_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Executive Management Team</label>
    <nameField>
        <label>Executive Management Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Management Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>